14.5.1
  - UI blocking occurred in rare cases when database metadata acquisition took a long time. This has been corrected.
  - Other minor improvements to the UI.

14.5
  - Both the in-place editor and the search condition dialog now support columns of type "enum".
  - Support of "identity" columns was added. (PostgreSQL, Microsoft SQL Server and DB/2)

14.4.2
  - The maximum possible memory usage has been increased.
  - Minor improvements to the user interface.

14.4.1
  - In rare cases, the user interface was blocked for a short time when establishing a connection. This has been corrected.

14.4
  - Missing dependencies for Java 11 and above have been added.
  - Improved support for CHAR/NCHAR columns.

14.3.4
  - Auto-completion in the "where" condition section has been improved.
  - Check for uniqueness now already takes place when collecting the rows to be exported.
  - Leading and trailing white spaces are now rendered visibly in the data browser.

14.3.3
  - Added support for PostgreSQL Range/Multirange Operators.

14.3.2
  - The estimation of table sizes could be significantly improved by using row counts from statements and queries.
  - The table sizes are now displayed in a better quality.

14.3.1
  - When a column filter is defined in the SQL query results window,
    the query in the console is augmented with the corresponding "where" condition.

14.3
  - In rare cases, an error message appeared after exporting, indicating an alleged discrepancy 
    between the number of exported rows and the collected ones (false positive).
    This error has been corrected.

14.2.1
  - Added a context menu to the database connection navigation tree.
  - Using "New Window" menu item now restores table-arrangement of original browser.
  - Improved responsiveness of the user interface.

14.2
  - Fix for "Ignore generated columns when export data". https://github.com/Wisser/Jailer/issues/101